--- a/convalescent-scenarios_transmat_age.Rmd
+++ b/convalescent-scenarios_transmat_age.Rmd
@@ -165,10 +165,10 @@ setup_seir_age = function(c_scale_vec=1, prop_sym, p_hosp, hcw.mix="45,55", hml.
             Is = c(rep(1, Ncomp-1), 0), 
             Ist = rep(0, Ncomp),
             R = rep(0, Ncomp),
+            incid_deaths = rep(0, Ncomp),
             incid_A = rep(0, Ncomp),
             incid_Im = rep(0, Ncomp),
             incid_Is = rep(0, Ncomp),
-            incid_deaths = rep(0, Ncomp),
             incid_plasma = rep(0, Ncomp))
   
   
@@ -194,9 +194,9 @@ setup_seir_age = function(c_scale_vec=1, prop_sym, p_hosp, hcw.mix="45,55", hml.
 ```
 
 
-
+<!--
 ```{r, echo=FALSE}
-seir_step_age = function(stoch.init = FALSE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
+seir_step_age = function(stoch.init = FALSE, stoch = TRUE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
                      params = parameters, plasma = plasma_params, 
                      SIA_r = SIA_rates,
                      init.min = 10, init.max = 100) {
@@ -386,41 +386,392 @@ W = params$W
     Tm[11,] = c(z, z, z, z, z, z, z, z, z, z, 1-z, z)
     
     
-    # do multinomial draws
-    nstates = dim(nt)[1]+1
-    Tm = data.frame(Tm)
-    TmN = matrix(NA, nrow=nstates, ncol=Ncomp*(nstates))
-    ntp1 = matrix(NA, nrow = nstates, ncol = Ncomp)
-    incid = matrix(NA, nrow = 5, ncol=Ncomp)
-    ntp = matrix(NA, nrow = nrow(ntp1)+nrow(incid), ncol = Ncomp)
-    for (i in 1:Ncomp){
-      # separate into matrices for each compartment
-      Tm_i = Tm[, seq(i, ncol(Tm), Ncomp)]
-      # draw multinomial draws
-      TmN_i = matrix(NA, nrow = nstates-1, ncol = nstates)
-      for (j in 1:nrow(TmN_i)){
-        size = nt[j, i]
-        TmN_i[j,] = rmultinom(1, size, prob = Tm_i[j,])
-        
-      }
-      ntp1[,i] = t(colSums(TmN_i))
-      incid[1,i] = sum(TmN_i[,5])-TmN_i[5,5] # incid_A
-      incid[2,i] = sum(TmN_i[,7])-TmN_i[7,7] # incid_Im
-      incid[3,i] = sum(TmN_i[,9])-TmN_i[9,9] # incid_Is
-      #incid[4,i] = nt[9,i]-TmN_i[9,10]-TmN_i[9,11]-TmN_i[9,9]+
-      #  nt[10,i]-TmN_i[10,11]-TmN_i[10,10]  #incid_deaths
-      incid[4,i] = sum(TmN_i[,12])
+    if(stoch==TRUE){
+      # do multinomial draws
+      nstates = dim(nt)[1]+1
+      Tm = data.frame(Tm)
+      TmN = matrix(NA, nrow=nstates, ncol=Ncomp*(nstates))
+      ntp1 = matrix(NA, nrow = nstates, ncol = Ncomp)
+      incid = matrix(NA, nrow = 5, ncol=Ncomp)
+      ntp = matrix(NA, nrow = nrow(ntp1)+nrow(incid), ncol = Ncomp)
+      for (i in 1:Ncomp){
+        # separate into matrices for each compartment
+        Tm_i = Tm[, seq(i, ncol(Tm), Ncomp)]
+        # draw multinomial draws
+        TmN_i = matrix(NA, nrow = nstates-1, ncol = nstates)
+        for (j in 1:nrow(TmN_i)){
+          size = nt[j, i]
+          TmN_i[j,] = rmultinom(1, size, prob = Tm_i[j,])
+          
+        }
+        ntp1[,i] = t(colSums(TmN_i))
+        incid[1,i] = sum(TmN_i[,5])-TmN_i[5,5] # incid_A
+        incid[2,i] = sum(TmN_i[,7])-TmN_i[7,7] # incid_Im
+        incid[3,i] = sum(TmN_i[,9])-TmN_i[9,9] # incid_Is
+        #incid[4,i] = nt[9,i]-TmN_i[9,10]-TmN_i[9,11]-TmN_i[9,9]+
+        #  nt[10,i]-TmN_i[10,11]-TmN_i[10,10]  #incid_deaths
+        incid[4,i] = sum(TmN_i[,12])
         incid[5,i] = sum(TmN_i[,2])-TmN_i[2,2]+sum(TmN_i[,4])-TmN_i[4,4]+sum(TmN_i[,6])-TmN_i[6,6]+sum(TmN_i[,8])-TmN_i[8,8]+sum(TmN_i[,10])-TmN_i[10,10] #incid_plasma
-      #ntp[1:nrow(ntp1),i] = ntp1[,i]
-      #ntp[(nrow(ntp1)+1):nrow(ntp),i] = incid[,i]
+        #ntp[1:nrow(ntp1),i] = ntp1[,i]
+        #ntp[(nrow(ntp1)+1):nrow(ntp),i] = incid[,i]
+      }
+      ntp1=ntp1[-c(12),]
+      ntp1_t = as.vector(t(ntp1))
+      incid_t = as.vector(t(incid))
+      
+      P[it+1,] = P[it,] - sum(incid[5,]) + rbinom(n = 1, size = sum(ntp1[11,]), prob = p_give*rate_p)
+      
+      out[it+1,] = c(ntp1_t, incid_t, P[it+1,])
+      
+      S[it+1,] = out[it+1, 1:Ncomp] 
+      St[it+1,] = out[it+1, (Ncomp+1):(2*Ncomp)]
+      E[it+1,] = out[it+1, (2*Ncomp+1):(3*Ncomp)] 
+      Et[it+1,] = out[it+1, (3*Ncomp+1):(4*Ncomp)]
+      A[it+1,] = out[it+1, (4*Ncomp+1):(5*Ncomp)]
+      At[it+1,] = out[it+1, (5*Ncomp+1):(6*Ncomp)]
+      Im[it+1,] = out[it+1, (6*Ncomp+1):(7*Ncomp)]
+      Imt[it+1,] = out[it+1, (7*Ncomp+1):(8*Ncomp)]
+      Is[it+1,] = out[it+1, (8*Ncomp+1):(9*Ncomp)]
+      Ist[it+1,] = out[it+1, (9*Ncomp+1):(10*Ncomp)]
+      R[it+1,] =  out[it+1, (10*Ncomp+1):(11*Ncomp)]
+      
+      # incidence
+      incid_A[it+1,] = out[it+1, (11*Ncomp+1):(12*Ncomp)]
+      incid_Im[it+1,] = out[it+1, (12*Ncomp+1):(13*Ncomp)]
+      incid_Is[it+1,] = out[it+1, (13*Ncomp+1):(14*Ncomp)]
+      incid_deaths[it+1,] = out[it+1, (14*Ncomp+1):(15*Ncomp)]
+      incid_plasma[it+1,] = out[it+1, (15*Ncomp+1):(16*Ncomp)]
+      
+      P[it+1,] = out[it+1, (16*Ncomp+1)]
     }
-    ntp1=ntp1[-c(12),]
-    ntp1_t = as.vector(t(ntp1))
-    incid_t = as.vector(t(incid))
     
-    P[it+1,] = P[it,] - sum(incid[5,]) + rbinom(n = 1, size = sum(ntp1[11,]), prob = p_give*rate_p)
+
+  }
+  
+  out2 = data.frame(cbind(time, S, St, E, Et, A, At, Im, Imt, Is, Ist, R, incid_A, incid_Im, incid_Is, incid_deaths, incid_plasma, P))
+  names(out2) = c("time", names(ICs), "plasma_units")
+  
+  return(out2) 
+}  
+
+```
+-->
+
+
+
+
+```{r, echo=FALSE}
+seir_step_age = function(stoch.init = FALSE, stoch = TRUE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
+                         params = parameters, plasma = plasma_params, 
+                         SIA_r = SIA_rates,
+                         init.min = 10, init.max = 100) {
+  
+  C = params$C
+  W = params$W
+  
+  
+  N = params$N
+  
+  beta = params$beta
+  gamma = params$gamma
+  sigma = params$sigma
+  time = params$time
+  delta.t = params$delta.t
+  v = params$v
+  mu = params$mu
+  v_I = params$v_I
+  
+  p_asym = params$p_asym
+  p_severe = params$p_severe
+  p_mild = params$p_mild
+  
+  gamma_t = plasma$gamma_t
+  prop_ef = plasma$prop_ef
+  ef_est = plasma$ef_est
+  prop_eti = plasma$prop_eti
+  SIA_s = SIA_r$SIA_s
+  SIA_e = SIA_r$SIA_e
+  SIA_ia = SIA_r$SIA_ia
+  SIA_im = SIA_r$SIA_im
+  SIA_is = SIA_r$SIA_is
+  
+  p0 = plasma$p0
+  p_s = plasma$p_s
+  p_e = plasma$p_e
+  p_ia = plasma$p_ia
+  p_im = plasma$p_im
+  p_is = plasma$p_is
+  p_use = plasma$p_use
+  rate_p = plasma$rate_p
+  p_give = plasma$p_give
+  
+  # set up matrix to store values
+  x = matrix(NA, nrow = length(time), ncol = Ncomp * length(ICs))
+  x[1, ]=round(ICs)
+  
+  # set initial conditions
+  if(stoch.init==TRUE){
+    Ninit = sample(init.min:init.max, 1)
+    pinit = N / sum(N)
+    Ninit_bygroup = rmultinom(1, Ninit, prob = pinit)[,1]
+    Ninit_asy = Ninit_bygroup * p_asym
+    Ninit_mild = Ninit_bygroup * p_mild
+    Ninit_severe = Ninit_bygroup * p_severe
+    ICs = c(S = N,           
+            E = rep(0, Ncomp),
+            A = Ninit_asy,
+            Im = Ninit_mild,
+            Is = Ninit_severe,
+            R = rep(0, Ncomp),
+            incid_I = rep(0, Ncomp),
+            incid_deaths = rep(0, Ncomp),
+            incid_plasma = rep(0, Ncomp))
+    x[1,] <- round(ICs)
+  }else{ x[1,] <- round(ICs) }
+  
+  S = x[, 1:Ncomp] 
+  St = x[, (Ncomp+1):(2*Ncomp)]
+  E = x[, (2*Ncomp+1):(3*Ncomp)] 
+  Et = x[, (3*Ncomp+1):(4*Ncomp)]
+  A = x[, (4*Ncomp+1):(5*Ncomp)]
+  At = x[, (5*Ncomp+1):(6*Ncomp)]
+  Im = x[, (6*Ncomp+1):(7*Ncomp)]
+  Imt = x[, (7*Ncomp+1):(8*Ncomp)]
+  Is = x[, (8*Ncomp+1):(9*Ncomp)]
+  Ist = x[, (9*Ncomp+1):(10*Ncomp)]
+  R =  x[, (10*Ncomp+1):(11*Ncomp)]
+  
+  P = matrix(NA, nrow = length(time), ncol = 1)
+  P[1, 1] = p0
+  
+  # incidence
+  incid_deaths = x[, (11*Ncomp+1):(12*Ncomp)]
+  incid_A = x[, (12*Ncomp+1):(13*Ncomp)]
+  incid_Im = x[, (13*Ncomp+1):(14*Ncomp)]
+  incid_Is = x[, (14*Ncomp+1):(15*Ncomp)]
+  incid_plasma = x[, (15*Ncomp+1):(16*Ncomp)]
+  
+  sd.dw = sd.dw
+  
+  
+  
+  out = matrix(NA, nrow = length(time), ncol = Ncomp * 11 + 5*Ncomp + 1 )
+  
+  for (it in 1:(length(time) - 1)) {
     
-    out[it+1,] = c(ntp1_t, incid_t, P[it+1,])
+    
+    nt = rbind(S[it, ], St[it,], E[it, ], Et[it, ], A[it, ], At[it,], Im[it,], Imt[it,], Is[it,], Ist[it,], R[it,])
+    
+    # 5 = number of variables in incid matrix; 1 = plasma
+    temp = cbind(S[1,], St[1,], E[1,], Et[1,], A[1,], At[1,], Im[1,], Imt[1,], Is[1,], Ist[1,], R[1,], incid_deaths[1,], incid_A[1,], incid_Im[1,], incid_Is[1,], incid_plasma[1,])
+    temp2 =  as.vector(temp)
+    temp2 = as.vector(c(temp2,P[1,]))
+    out[1,] = temp2
+    names(out) = c(names(ICs), "plasma_units")
+    
+    WI = (C*W) %*% (A[it,]+At[it,]+Im[it,]+Imt[it,]+Is[it,]+Ist[it,])
+    births = rep(0, Ncomp)
+    births[1] = mu
+    deaths = rep(v, Ncomp)
+    ######### GOING TO NEED TO UPDATE DEATHS FROM COVID ---- age and severity (ICU / non-ICU)
+    deaths_I = rep(v_I, Ncomp)
+    deaths_It = rep(v_It, Ncomp)
+    
+    dw = rtruncnorm(Ncomp, a =0, mean = 1, sd = sd.dw)
+    
+    # transitions
+    foi_prob <- 1 - exp( - beta* WI / N * dw * delta.t)
+    exposed_prob <- 1 - exp( - sigma * delta.t)    
+    inf_prob <- 1 - exp( - gamma * delta.t)   
+    death_prob <- 1 - exp( - deaths * delta.t)
+    death_prob_I <- 1 - exp( - deaths_I * delta.t)
+    inf_prob_t <- 1 - exp(- gamma_t * delta.t * (1-prop_eti))
+    inf_prob_et <- 1 - exp( - sigma * delta.t * prop_eti)
+    death_prob_It <- 1 - exp( - deaths_It * delta.t)
+    foi_prob_St <- 1 - exp( - ef_est * beta* WI / N * dw * delta.t)
+    #exposed_prob_t <- 1 - exp( - sigma * delta.t * ef_est)   
+    
+    
+    # plasma allocation ---- CONSIDER HOW TO DO THIS NICELY. 
+    # # 1. split between compartments based on multinomial draw
+    # size = round(P[it,] *p_use)
+    # probs_plasma = c(p_s, p_e, p_ia, p_im, p_is, 1-sum(p_s, p_e, p_ia, p_im, p_is))
+    # n_plasma = rmultinom(1, size, prob = probs_plasma)
+    # # 2. check whether any of the allocations are > number of individuals in those compartments
+    # ind = c(S[it,], E[it,], A[it,], Im[it,], Is[it,])
+    # camp = c(SIA_s[it,], SIA_e[it,], SIA_ia[it,], SIA_im[it,], SIA_is[it,])   ### campaign 
+    # for (k in 1:length(ind)){
+    #   n_plasma[k] = min(n_plasma[k]+camp[k], ind[k])
+    # }
+    # l = length(n_plasma)
+    # n_plasma[l] = round(P[it,]*p_use)-sum(n_plasma[1:(length(n_plasma)-1)])
+    # p_plasma = ifelse(ind==0, 0, n_plasma[1:(length(n_plasma)-1)] / ind)
+    # 3. Take into account that a portion of administered plasma does not have high enough titers to be effective
+    # p_eff_plasma = p_plasma * prop_ef      ### proportion of individuals that receive plasma that receive plasma with high enough titer and move on to the T compartment
+    # p_St = p_eff_plasma[1:Ncomp]
+    # p_Et = p_eff_plasma[(Ncomp+1): 2*Ncomp]
+    # p_Iat = p_eff_plasma[(2*Ncomp+1): 3*Ncomp]
+    # p_Imt = p_eff_plasma[(3*Ncomp+1): 4*Ncomp]
+    # p_Ist = p_eff_plasma[(4*Ncomp+1): 5*Ncomp]
+    
+    ## previous version of plasma allocation-- need to check this
+    new_St = rep(NA, Ncomp)
+    for(i in (1:Ncomp)){
+      new_St[i] = ifelse(P[it] * p_use * p_s[i] + SIA_s[it, i]>S[it,i],  S[it, i] * prop_ef, P[it] * p_use * p_s[i] * prop_ef + SIA_s[it, i] * prop_ef)
+    }
+    p_St = ifelse(new_St == 0, 0, new_St / S[it, ])
+    
+    new_Et = rep(NA, Ncomp)
+    for(i in (1:Ncomp)){
+      new_Et[i] = ifelse(P[it] * p_use * p_e[i] + SIA_e[it, i]>E[it,i],  E[it, i] * prop_ef, P[it] * p_use * p_e[i] * prop_ef + SIA_e[it, i] * prop_ef)
+    }      
+    p_Et = ifelse(new_Et ==0, 0, new_Et / E[it, ])
+    
+    new_Iat = rep(NA, Ncomp)
+    for(i in (1:Ncomp)){
+      new_Iat[i] = ifelse(P[it] * p_use * p_ia[i] + SIA_ia[it, i]>A[it,i],  A[it, i] * prop_ef, P[it] * p_use * p_ia[i] * prop_ef + SIA_ia[it, i] * prop_ef)
+    } 
+    p_Iat = ifelse(new_Iat ==0, 0, new_Iat / A[it, ])
+    
+    new_Imt = rep(NA, Ncomp)
+    for(i in (1:Ncomp)){
+      new_Imt[i] = ifelse(P[it] * p_use * p_im[i] + SIA_im[it, i]>Im[it,i],  Im[it, i] * prop_ef, P[it] * p_use * p_im[i] * prop_ef + SIA_im[it, i] * prop_ef)
+    }  
+    p_Imt = ifelse(new_Imt ==0, 0, new_Imt / Im[it, ])
+    
+    new_Ist = rep(NA, Ncomp)
+    for(i in (1:Ncomp)){
+      new_Ist[i] = ifelse(P[it] * p_use * p_is[i] + SIA_is[it, i]>Is[it,i],  Is[it, i] * prop_ef, P[it] * p_use * p_is[i] * prop_ef + SIA_is[it, i] * prop_ef)
+    }  
+    p_Ist = ifelse(new_Ist ==0, 0, new_Ist / Is[it, ])
+    
+    
+    ## set up a transition matrix A
+    nt = rbind(S[it, ], St[it,], E[it, ], Et[it, ], A[it, ], At[it,], Im[it,], Imt[it,], Is[it,], Ist[it,], R[it,], incid_deaths[it,])
+    
+    
+    # create a list of empty transition matrices for each age cat
+    TM_list = lapply(1:Ncomp, matrix, data= NA, nrow=dim(nt)[1], ncol=dim(nt)[1])
+    for (k in 1:Ncomp){
+      Tm_a = TM_list[[k]]
+      
+      # transitions out of S compartment
+      Tm_a[1,] = c(1-p_St[k]-t(foi_prob[k]), p_St[k], t(foi_prob[k]), 0, 0, 0, 0, 0, 0, 0, 0, 0)
+      # transitions out of St compartment
+      Tm_a[2,] = c(0, 1-t(foi_prob_St[k]), t(foi_prob_St[k]), 0, 0, 0, 0, 0, 0, 0, 0, 0)
+      # transitions out of E compartment
+      Tm_a[3,] = c(0, 0, 1-p_Et[k]-exposed_prob[k], p_Et[k], exposed_prob[k]*p_asym[k], 0, exposed_prob[k]*p_mild[k], 0, exposed_prob[k]*p_severe[k], 0, 0, 0)
+      # transitions out of Et compartment
+      Tm_a[4,] = c(0, 0, 0, 1-inf_prob_et[k]-inf_prob_t[k], inf_prob_et[k]*p_asym[k], 0, inf_prob_et[k]*p_mild[k], 0, inf_prob_et[k]*p_severe[k], 0, inf_prob_t[k], 0)
+      # transitions out of Ia compartment
+      Tm_a[5,] = c(0, 0, 0, 0, 1-p_Iat[k]-inf_prob[k], p_Iat[k], 0, 0, 0, 0, inf_prob[k], 0)
+      # transitions out of Iat compartment
+      Tm_a[6,] = c(0, 0, 0, 0, 0, 1-inf_prob_t[k], 0, 0, 0, 0, inf_prob_t[k], 0)
+      # transitions out of Im compartment
+      Tm_a[7,] = c(0, 0, 0, 0, 0, 0, 1-p_Imt[k]-inf_prob[k], p_Imt[k], 0, 0, inf_prob[k], 0)
+      # transitions out of Imt compartment
+      Tm_a[8,] = c(0, 0, 0, 0, 0, 0, 0, 1-inf_prob_t[k], 0, 0, inf_prob_t[k], 0)
+      # transitions out of Is compartment
+      Tm_a[9,] = c(0, 0, 0, 0, 0, 0, 0, 0, 1-p_Ist[k]-inf_prob[k]-death_prob_I[k], p_Ist[k], inf_prob[k], death_prob_I[k])
+      # transitions out of Ist compartment
+      Tm_a[10,] = c(0, 0, 0, 0, 0, 0, 0, 0, 0, 1-inf_prob_t[k]-death_prob_It[k], inf_prob_t[k], death_prob_It[k])
+      # transitions out of R compartment
+      Tm_a[11,] = c(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1-0, 0)
+      # transitions out of incid_deaths compartment ---- no movement out - more of a placeholder row to pad out the matrix
+      Tm_a[12,] = c(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1)
+      
+      TM_list[[k]] = t(Tm_a)    ### transpose 
+      
+    }
+    
+    
+    nt_vec = t(t(as.vector(nt)))
+    TM_full = matrix(0, nrow = Ncomp * dim(nt)[1], ncol = Ncomp * dim(nt)[1])
+    for (k in 1:Ncomp){
+      TM_full[(dim(nt)[1]*(k-1)+1):((dim(nt)[1]*(k-1))+dim(nt)[1]), (dim(nt)[1]*(k-1)+1):((dim(nt)[1]*(k-1))+dim(nt)[1])] = TM_list[[k]]
+    }
+    
+    #### deterministic approach
+    if(stoch==FALSE){
+      ntp1 = TM_full %*% nt_vec 
+      
+      
+      # create incidence data
+      # replace diagonal values with 0s (because that's the people that stay in the same compartment)
+      TM_new = TM_full
+      diag(TM_new) = 0
+      ntp1_new = TM_new %*% nt_vec
+      ntp1_new.df =data.frame(ntp1_new)
+      # for incid_deaths
+      incid_deaths_new = ntp1_new.df %>% filter(row_number() %% dim(nt)[1] == 0)
+      # for Ia, extract every 7th column, starting with 5th 
+      Ia_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 5)
+      # for Im
+      Im_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 7)
+      # for Is
+      Is_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 9)
+      # for plasma
+      I_plasma_st = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 2) 
+      I_plasma_et = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 4)
+      I_plasma_iat = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 6)
+      I_plasma_imt = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 8)
+      I_plasma_ist = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 10)
+      I_plasma = I_plasma_st + I_plasma_et + I_plasma_iat + I_plasma_imt + I_plasma_ist
+      
+    }
+    
+    
+    ##### Stochastic formulation
+    
+    
+    if(stoch==TRUE){
+      # do multinomial draws
+      TmN_i = matrix(NA, nrow = nrow(TM_full), ncol = ncol(TM_full))
+      
+      for (k in 1:(nrow(TM_full))){
+        size = nt_vec[k]
+        TmN_i[,k] = rmultinom(1, size, prob = TM_full[,k])
+      }
+      ntp1 = rowSums(TmN_i)    
+      
+      
+      # create incidence data
+      # replace diagonal values with 0s (because that's the people that stay in the same compartment)
+      TM_new = TmN_i
+      diag(TM_new) = 0
+      ntp1_new = rowSums(TM_new)
+      ntp1_new.df =data.frame(ntp1_new)
+      # for incid_deaths
+      incid_deaths_new = ntp1_new.df %>% filter(row_number() %% dim(nt)[1] == 0)
+      # for Ia, extract every 7th column, starting with 5th 
+      Ia_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 5)
+      # for Im
+      Im_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 7)
+      # for Is
+      Is_new = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 9)
+      # for plasma
+      I_plasma_st = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 2) 
+      I_plasma_et = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 4)
+      I_plasma_iat = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 6)
+      I_plasma_imt = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 8)
+      I_plasma_ist = ntp1_new.df %>%  filter(row_number() %% dim(nt)[1] == 10)
+      I_plasma = I_plasma_st + I_plasma_et + I_plasma_iat + I_plasma_imt + I_plasma_ist
+    }
+    
+    
+    
+    # update the plasma compartment
+    # number of recovered individuals
+    rec = round(sum(ntp1[seq(11, length(ntp1), dim(nt)[1])]))
+    P[it+1,] = P[it,] - sum(I_plasma) + rbinom(n = 1, size = rec, prob = p_give*rate_p)
+    
+    # convert to a nice format for output
+    temp=matrix(ntp1, ncol = Ncomp, byrow=FALSE)
+    temp_vec = as.vector(t(temp))
+    # drop the incid_deaths from temp_vec
+    temp_vec = temp_vec[1:(Ncomp * (dim(nt)[1]-1))]
+    out[it+1,] = c(temp_vec, t(incid_deaths_new), t(Ia_new), t(Im_new), t(Is_new), t(I_plasma), P[it+1,])
+    
     
     S[it+1,] = out[it+1, 1:Ncomp] 
     St[it+1,] = out[it+1, (Ncomp+1):(2*Ncomp)]
@@ -435,16 +786,19 @@ W = params$W
     R[it+1,] =  out[it+1, (10*Ncomp+1):(11*Ncomp)]
     
     # incidence
-    incid_A[it+1,] = out[it+1, (11*Ncomp+1):(12*Ncomp)]
-    incid_Im[it+1,] = out[it+1, (12*Ncomp+1):(13*Ncomp)]
-    incid_Is[it+1,] = out[it+1, (13*Ncomp+1):(14*Ncomp)]
-    incid_deaths[it+1,] = out[it+1, (14*Ncomp+1):(15*Ncomp)]
+    incid_deaths[it+1,] = out[it+1, (11*Ncomp+1):(12*Ncomp)]
+    incid_A[it+1,] = out[it+1, (12*Ncomp+1):(13*Ncomp)]
+    incid_Im[it+1,] = out[it+1, (13*Ncomp+1):(14*Ncomp)]
+    incid_Is[it+1,] = out[it+1, (14*Ncomp+1):(15*Ncomp)]
     incid_plasma[it+1,] = out[it+1, (15*Ncomp+1):(16*Ncomp)]
     
     P[it+1,] = out[it+1, (16*Ncomp+1)]
   }
   
-  out2 = data.frame(cbind(time, S, St, E, Et, A, At, Im, Imt, Is, Ist, R, incid_A, incid_Im, incid_Is, incid_deaths, incid_plasma, P))
+  
+  
+  
+  out2 = data.frame(cbind(time, S, St, E, Et, A, At, Im, Imt, Is, Ist, R, incid_deaths, incid_A, incid_Im, incid_Is, incid_plasma, P))
   names(out2) = c("time", names(ICs), "plasma_units")
   
   return(out2) 
@@ -457,7 +811,7 @@ W = params$W
 ```{r, echo=FALSE}
 
 
-multiple_runs_age <- function(IC = InCs, Ncomp2 = Ncomp, plasma_p = plasma_params, paramt = parameters, SIA_r = SIA_rates, nsims = 100){
+multiple_runs_age <- function(IC = InCs, stoch_value = TRUE, Ncomp2 = Ncomp, plasma_p = plasma_params, paramt = parameters, SIA_r = SIA_rates, nsims = 100){
   
 
   all_sim <- matrix(NA,1,(length(IC))+2+1) 
@@ -468,7 +822,7 @@ multiple_runs_age <- function(IC = InCs, Ncomp2 = Ncomp, plasma_p = plasma_param
   for(n in 1:nsims){    
     ## run the simulation one time    
   
-  single.sim =seir_step_age(stoch.init = FALSE, Ncomp = Ncomp2, ICs = IC, sd.dw = 0.00, 
+  single.sim =seir_step_age(stoch = stoch_value, stoch.init = FALSE, Ncomp = Ncomp2, ICs = IC, sd.dw = 0.00, 
                      params = paramt, plasma = plasma_p,
                      SIA_r = SIA_r,
                      init.min = 10, init.max = 100 ) 
@@ -553,7 +907,7 @@ N = pop
 R0 = 2.5
 gamma = rep(1 / 6.5, Ncomp)
 sigma = rep(1 / 5.2, Ncomp)
-time_max = 200
+time_max = 400
 delta.t = 1
 time = seq(0, time_max, delta.t)
 v = 0  ### death rate
@@ -633,23 +987,50 @@ SIA_is[t_SIA_is, ] = val_SIA_is
 SIA_rates <- list(SIA_s = SIA_s, SIA_e = SIA_e, SIA_ia = SIA_ia, SIA_im = SIA_im, SIA_is = SIA_is)
 ```
 
-
+Run single simulations - deterministic and stochastic
 ```{r, echo=FALSE}
-single.sim =seir_step_age(stoch.init = FALSE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
+single.sim =seir_step_age(stoch = TRUE, stoch.init = FALSE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
                      params = parameters, plasma = plasma_params,
                      SIA_r = SIA_rates,
                      init.min = 10, init.max = 100 ) 
 
+single.sim_det =seir_step_age(stoch = FALSE, stoch.init = FALSE, Ncomp = Ncomp, ICs = InCs, sd.dw = 0.00, 
+                     params = parameters, plasma = plasma_params,
+                     SIA_r = SIA_rates,
+                     init.min = 10, init.max = 100 ) 
+
+
+```
+
+```{r, echo=FALSE}
+# plot deterministic number of infections and deaths
+single.sim_det = single.sim_det %>% mutate(incidI = A1 + A2 + A3 + A4 + A5 + A6 + A7 +
+                            Im1 + Im2 + Im3 + Im4 + Im5 + Im6 + Im7 + 
+                            Is1 + Is2 + Is3 + Is4 + Is5 + Is6 + Is7,
+                            incid_deaths = incid_deaths1+incid_deaths2 + incid_deaths3 + incid_deaths4 + 
+                              incid_deaths5 + incid_deaths6 + incid_deaths7)
+single.sim_det %>% ggplot(aes(time,incidI))+geom_line()+ggtitle("Deterministic model, Daily infectious cases, all groups")
+ single.sim_det %>% ggplot(aes(time,incid_deaths))+geom_line()+ggtitle("Deterministic model, Daily deaths, all groups")
+ 
+```
+```{r, echo=FALSE}
+# plot stochastic number of infections and deaths
+single.sim_sto = single.sim %>% mutate(incidI = A1 + A2 + A3 + A4 + A5 + A6 + A7 +
+                            Im1 + Im2 + Im3 + Im4 + Im5 + Im6 + Im7 + 
+                            Is1 + Is2 + Is3 + Is4 + Is5 + Is6 + Is7,
+                            incid_deaths = incid_deaths1+incid_deaths2 + incid_deaths3 + incid_deaths4 + 
+                              incid_deaths5 + incid_deaths6 + incid_deaths7)
+single.sim_sto %>% ggplot(aes(time,incidI))+geom_line()+ggtitle("Stochastic model, Daily infectious cases, all groups")
+ single.sim_sto %>% ggplot(aes(time,incid_deaths))+geom_line()+ggtitle("Stochastic model, Daily deaths, all groups")
+ 
 ```
 
 
-
-
-
+Now run multiple simulations for the stochastic formulation
 ```{r, echo=FALSE}
 
 num_sims = 100
-all_sim_run1 = suppressWarnings(multiple_runs_age(nsims = num_sims))
+all_sim_run1 = suppressWarnings(multiple_runs_age(nsims = num_sims, stoch = TRUE))
 ```
 
 ```{r, echo=FALSE, fig.width=9}
@@ -692,7 +1073,9 @@ gridExtra::grid.arrange(new_inf_plot, new_deaths_plot, nrow = 1)
 summ_ <- all_sim_run1 %>% group_by(run_index) %>% 
   summarise(final_size = max(cum_inf, na.rm=TRUE),
             final_deaths = max(cum_deaths, na.rm=TRUE),
-            final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2), na.rm=TRUE))
+            final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2)+cumsum(incid_plasma3)+
+                                 cumsum(incid_plasma4)+cumsum(incid_plasma5)+cumsum(incid_plasma6)+
+                                 cumsum(incid_plasma7), na.rm=TRUE))
 
 final_size_all <- summ_ %>%
   summarise(mean = mean(final_size, na.rm=TRUE),
@@ -794,7 +1177,9 @@ gridExtra::grid.arrange(new_inf_plot2, new_deaths_plot2, nrow = 1)
 summ_2 <- all_sim_run2 %>% group_by(run_index) %>% 
   summarise(final_size = max(cum_inf, na.rm=TRUE),
             final_deaths = max(cum_deaths, na.rm=TRUE),
-            final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2), na.rm=TRUE))
+            final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2)+cumsum(incid_plasma3)+
+                                 cumsum(incid_plasma4)+cumsum(incid_plasma5)+cumsum(incid_plasma6)+
+                                 cumsum(incid_plasma7), na.rm=TRUE))
 
 final_size_all_2 <- summ_2 %>%
   summarise(mean = mean(final_size, na.rm=TRUE),
@@ -827,7 +1212,7 @@ Scenario 3 - assume we are only giving plasma only to susceptible healthworkers
 
 
 p0 = 2000   # number of units of plasma available at day 1
-p_s = c(0, 0, 0, 0, 0, 0.2, 0)    # proportion of plasma used allocated to susceptible 
+p_s = c(0, 0, 0, 0, 0, 0.3, 0)    # proportion of plasma used allocated to susceptible 
 p_e = rep(0, Ncomp)   # proportion of plasma used allocated to exposed
 p_ia = rep(0, Ncomp)   # proportion of plasma used allocated for treatment of infected asymptomatic
 p_im = rep(0, Ncomp)  # proportion of plasma used allocated for treatment of infected mild
@@ -855,7 +1240,7 @@ all_sim_run3 = suppressWarnings(multiple_runs_age(nsims = num_sims, plasma_p = p
 
 ```
 
-```{r, include=FALSE, fig.width=9}
+```{r, echo=FALSE, fig.width=9}
 # Plot new infections and deaths 
 summ_days_run3 = all_sim_run3 %>% drop_na() %>% group_by(time) %>%
 summarise(mean_inf = mean(incid_I, na.rm=TRUE),
@@ -892,7 +1277,9 @@ gridExtra::grid.arrange(new_inf_plot3, new_deaths_plot3, nrow = 1)
 summ_3 <- all_sim_run3 %>% group_by(run_index) %>% 
   summarise(final_size = max(cum_inf, na.rm=TRUE),
             final_deaths = max(cum_deaths, na.rm=TRUE),
-            final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2), na.rm=TRUE))
+           final_plasma = max(cumsum(incid_plasma1)+cumsum(incid_plasma2)+cumsum(incid_plasma3)+
+                                 cumsum(incid_plasma4)+cumsum(incid_plasma5)+cumsum(incid_plasma6)+
+                                 cumsum(incid_plasma7), na.rm=TRUE))
 
 
 final_size_all_3 <- summ_3 %>%
@@ -970,43 +1357,5 @@ scale_color_manual(values = colors)+
 labs(y = "Daily cases", x = "Day", color="Legend")
 
 gridExtra::grid.arrange(new_inf_plot_combo, new_deaths_plot_combo, nrow = 1)
-
-```
-
-```{r, include=FALSE, fig.width = 9}
-# combine the scenarios on a plot
-
-colors = c("Scenario 1" = "blue",
-           "Scenario 2" = "red", 
-           "Scenario 3" = "green")
-new_inf_plot_combo123<-ggplot(data = NULL, aes(x=time)) + 
-geom_line(data = summ_days_run1, aes(y = mean_inf, color = "Scenario 1")) +
-geom_ribbon(data = summ_days_run1, aes(ymin=ll_inf, ymax=ul_inf), fill="blue", linetype=2, alpha=0.1) +
-  geom_line(data = summ_days_run2, aes(y = mean_inf, color = "Scenario 2")) +
-geom_ribbon(data = summ_days_run2, aes(ymin=ll_inf, ymax=ul_inf), fill="red", linetype=2, alpha=0.1) +
-    geom_line(data = summ_days_run3, aes(y = mean_inf, color = "Scenario 3")) +
-geom_ribbon(data = summ_days_run3, aes(ymin=ll_inf, ymax=ul_inf), fill="green", linetype=2, alpha=0.1) +
-ggtitle("New infections") +   theme_classic() +
-scale_color_manual(values = colors)+
-labs(y = "Daily cases", x = "Day", color="Legend")
-#new_inf_plot_combo
-
-
-
-new_deaths_plot_combo123<-ggplot(data=NULL, aes(x=time)) +
-geom_line(data = summ_days_run1, aes(y = mean_deaths, color = "Scenario 1")) +
-geom_ribbon(data = summ_days_run1, aes(ymin=ll_deaths, ymax=ul_deaths), fill="blue", linetype=2, alpha=0.1) +
-geom_line(data = summ_days_run2, aes(y = mean_deaths, color = "Scenario 2")) +
-geom_ribbon(data = summ_days_run2, aes(ymin=ll_deaths, ymax=ul_deaths), fill="red", linetype=2, alpha=0.1) + 
-geom_line(data = summ_days_run3, aes(y = mean_deaths, color = "Scenario 3")) +
-geom_ribbon(data = summ_days_run3, aes(ymin=ll_deaths, ymax=ul_deaths), fill="green", linetype=2, alpha=0.1) +
-ggtitle("New deaths") +   theme_classic() +
-scale_color_manual(values = colors)+
-labs(y = "Daily cases", x = "Day", color="Legend")
-
-
-
-gridExtra::grid.arrange(new_inf_plot_combo123, new_deaths_plot_combo123,
-                        nrow = 2)
 
 ```
